lt-lb-umbr/deployment/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: lt-lb-umbr-demo
  namespace: default
spec:
  selector:
    app: lt-lb-umbr-demo
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
